# dimbridge-jupyter

./: .gitignore  README.md  _example-backup.ipynb  app.py  example.ipynb  llm-material-embeddings.ipynb  package-lock.json  package.json  pip-notes.md  pyproject.toml  rdf.ipynb
js/: DataExtentPredicate.js  PredicateEngine.js  Session.vim  controller.js  fancy-frames.js  lib.js  views.js  widget.css  widget.js
js/lib/: fancy-frames.js
js/predicate_engine/: DataExtentPredicate.js  PredicateRegression.js  old.js
js/views/: ImageView.js  PredicateView.js  ProjectionView.js  SplomView.js  view-utils.js
pip-template/: note.md
pip-template/src/dimbridge/: __init__.py  __main__.py
pip-template/src/dimbridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dimbridge/: __init__.py  datautils.py  hi.py  main.py  predicate_engine.py
