[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "dimbridge"
description = "DimBridge: Interactive Explanation of Visual Patterns in Dimensionality Reductions with Predicate Logic"
version = "0.1.5"
dependencies = ["anywidget", "jupyterlab", "torch", "numpy", "pandas", "natsort", "matplotlib", "umap-learn", "ipywidgets"]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/dimbridge/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/dimbridge/static/widget.js"]
skip-if-exists = ["src/dimbridge/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"


[tool.bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/dimbridge/__init__.py" = ['__version__ = "{version}"']
